<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"

    tools:context=".Signup">



    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="128dp"
        android:layout_height="71dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/_ldrp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="84dp"
        tools:ignore="RtlCompat">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tidUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmailid"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tilUsername"
        android:layout_alignParentLeft="true"
        tools:ignore="RtlCompat">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tidEmailid"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_id" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUniqueid"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tilEmailid"
        android:layout_alignParentLeft="true"
        tools:ignore="RtlCompat">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tidUniqueId"
            android:layout_width="445dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_unique_id" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilMobilenumber"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="231dp"
        tools:ignore="RtlCompat">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tidMobilenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="+91 Enter Phone Number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tilMobilenumber"
        android:layout_alignParentLeft="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tidPassword"
            android:layout_width="509dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttongetcode"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="152dp"
        android:background="@color/Blue"
        android:text="@string/get_otp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="70dp"
        tools:ignore="RtlCompat">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tidOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter OTP" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:background="@color/Blue"
        android:text="Sign Up" />

    <Spinner
        android:id="@+id/spinnerSelectUser"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="207dp"
        android:entries="@array/selectUser" />

    <Spinner
        android:id="@+id/spinnerSelectDepartment"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttongetcode"
        android:layout_marginTop="-152dp"
        android:entries="@array/selectDepartment" />

    <Spinner
        android:id="@+id/spinnerSemester"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="167dp"
        android:entries="@array/semester" />


</RelativeLayout>
